--- a/index.html
+++ b/index.html
@@ -4,6 +4,74 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<p>Hello World!</p>
+		<div class="heading">
+			<h1>Cole Cathcart</h1>
+			<h2>online portfolio showcase</h2>
+		</div>
+		<div class="about">
+			<h1>About Me</h1>
+			<div>
+				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<div>
+					<p>I am epic!</p>
+					<button>View Resume</button>
+				</div>
+			</div>
+		</div>
+		<div class="projects">
+			<h1>Projects</h1>
+			<div>
+				<div>
+					<h2>DM Screen</h2>
+					<p>Epic DM Screen project!</p>
+					<button>live demo</button>
+					<button>github</button>
+				</div>
+				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+			</div>
+			<div>
+				<div>
+					<h2>Kanban Board Task Manager</h2>
+					<p>Epic Kanban board project!</p>
+					<button>github</button>
+				</div>
+				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+			</div>
+			<div>
+				<div>
+					<h2>Grocery Store Database</h2>
+					<p>Epic grocery store database project!</p>
+					<button>github</button>
+				</div>
+				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+			</div>
+			<div>
+				<div>
+					<h2>Go Compiler</h2>
+					<p>Epic Go compiler project!</p>
+					<button>github</button>
+				</div>
+				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+			</div>
+			<div>
+				<div>
+					<h2>True Randomness Generator</h2>
+					<p>Epic TRNG project!</p>
+					<button>findings paper</button>
+					<button>github</button>
+				</div>
+				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+			</div>
+		</div>
+		<div class="contact">
+			<h1>Contact Me</h1>
+			<p>I'd love to chat!</p>
+			<button>cole.cathcart@icloud.com</button>
+		</div>
+		<footer>
+			<button>^</button>
+			<button>github</button>
+			<button>linkedin</button>
+		</footer>
 	</body>
 </html>
