--- a/index.html
+++ b/index.html
@@ -1,77 +1,95 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Cole Cathcart</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="https://kit.fontawesome.com/e4cd639041.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div class="heading">
-			<h1>Cole Cathcart</h1>
-			<h2>online portfolio showcase</h2>
+			<div>
+				<h1>Cole Cathcart</h1>
+				<button class="colorbutton"><h2>my online portfolio</h2></button>
+			</div>
 		</div>
 		<div class="about">
-			<h1>About Me</h1>
+			<h1>ABOUT ME</h1>
 			<div>
-				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
-				<div>
+				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<div class="desc-w-btns">
 					<p>I am epic!</p>
-					<button>View Resume</button>
+					<button class="whitebutton"><p><b>View Resume</b></p></button>
 				</div>
 			</div>
 		</div>
 		<div class="projects">
-			<h1>Projects</h1>
-			<div>
-				<div>
+			<h1>PROJECTS</h1>
+			<div class="project">
+				<div class="proj-desc">
 					<h2>DM Screen</h2>
 					<p>Epic DM Screen project!</p>
-					<button>live demo</button>
-					<button>github</button>
+					<div>
+						<button class="colorbutton"><p><b>live demo</b></p></button>
+						<button class="colorbutton"><p><b>github</b></p></button>
+					</div>
 				</div>
-				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
 			</div>
-			<div>
-				<div>
+			<div class="project">
+				<div class="proj-desc">
 					<h2>Kanban Board Task Manager</h2>
 					<p>Epic Kanban board project!</p>
-					<button>github</button>
+					<div>
+						<button class="colorbutton"><p><b>github</b></p></button>
+					</div>
 				</div>
-				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
 			</div>
-			<div>
-				<div>
+			<div class="project">
+				<div class="proj-desc">
 					<h2>Grocery Store Database</h2>
 					<p>Epic grocery store database project!</p>
-					<button>github</button>
+					<div>
+						<button class="colorbutton"><p><b>github</b></p></button>
+					</div>
 				</div>
-				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
 			</div>
-			<div>
-				<div>
+			<div class="project">
+				<div class="proj-desc">
 					<h2>Go Compiler</h2>
 					<p>Epic Go compiler project!</p>
-					<button>github</button>
+					<div>
+						<button class="colorbutton"><p><b>github</b></p></button>
+					</div>
 				</div>
-				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
 			</div>
-			<div>
-				<div>
+			<div class="project">
+				<div class="proj-desc">
 					<h2>True Randomness Generator</h2>
 					<p>Epic TRNG project!</p>
-					<button>findings paper</button>
-					<button>github</button>
+					<div>
+						<button class="colorbutton"><p><b>findings paper</b></p></button>
+						<button class="colorbutton"><p><b>github</b></p></button>
+					</div>
 				</div>
-				<img src="/images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
 			</div>
 		</div>
 		<div class="contact">
-			<h1>Contact Me</h1>
+			<h1>CONTACT ME</h1>
 			<p>I'd love to chat!</p>
-			<button>cole.cathcart@icloud.com</button>
+			<button class="whitebutton"><p><b>cole.cathcart@icloud.com</b></p></button>
 		</div>
 		<footer>
-			<button>^</button>
-			<button>github</button>
-			<button>linkedin</button>
+			<button><i class="fa-solid fa-chevron-up fa-lg"></i></button>
+			<div>
+				<button><i class="fa-brands fa-github fa-2xl"></i></button>
+				<button><i class="fa-brands fa-linkedin-in fa-2xl"></i></button>
+			</div>
+			<hr>
+			<p>Created with HTML & CSS. Design based on  <a href="https://github.com/cobiwave/simplefolio">Simplefolio</a></p>
 		</footer>
 	</body>
 </html>
