--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<button class="colorbutton" onclick="window.open('https://github.com/colecathcart/DMScreen-project')"><p><b>github</b></p></button>
 					</div>
 				</div>
-				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/dmscreen.png" alt="profile picture" width="200" height="200">
 			</div>
 			<div class="project">
 				<div class="proj-desc">
@@ -58,7 +58,7 @@
 						<button class="colorbutton" onclick="window.open('https://github.com/colecathcart/seng513-project')"><p><b>github</b></p></button>
 					</div>
 				</div>
-				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/2do.png" alt="profile picture" width="200" height="200">
 			</div>
 			<div class="project">
 				<div class="proj-desc">
@@ -72,7 +72,7 @@
 						<button class="colorbutton" onclick="window.open('https://github.com/colecathcart/Online-grocery-project')"><p><b>github</b></p></button>
 					</div>
 				</div>
-				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/grocerystore.png" alt="profile picture" width="200" height="200">
 			</div>
 			<div class="project">
 				<div class="proj-desc">
@@ -86,7 +86,7 @@
 						<button class="colorbutton" onclick="window.open('https://github.com/colecathcart/Compiler-Project')"><p><b>github</b></p></button>
 					</div>
 				</div>
-				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/compiler.png" alt="profile picture" width="200" height="200">
 			</div>
 			<div class="project">
 				<div class="proj-desc">
@@ -102,7 +102,7 @@
 						<button class="colorbutton" onclick="window.open('https://github.com/colecathcart/CPSC-530-Project')"><p><b>github</b></p></button>
 					</div>
 				</div>
-				<img src="images/mountain.jpg" alt="profile picture" width="200" height="200">
+				<img src="images/trng.png" alt="profile picture" width="200" height="200">
 			</div>
 		</div>
 		<div class="contact">
