Added better image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<button class="colorbutton" onclick="window.open('https://github.com/colecathcart/DMScreen-project')"><p><b>github</b></p></button>
 					</div>
 				</div>
-				<img src="images/dmscreen.png" alt="profile picture" width="200" height="200">
+				<img src="images/dmscreen.png" alt="profile picture">
 			</div>
 			<div class="project">
 				<div class="proj-desc">
@@ -109,7 +109,7 @@
 		<div class="contact">
 			<h1>CONTACT ME</h1>
 			<p>I'm eager to become a strong addition to your team!</p>
-			<button class="whitebutton"><p><b>cole.cathcart@icloud.com</b></p></button>
+			<button class="whitebutton" onclick="location.href='mailto:cole.cathcart@icloud.com'"><p><b>cole.cathcart@icloud.com</b></p></button>
 		</div>
 		<footer>
 			<button onclick="location.href='#heading'"><i class="fa-solid fa-chevron-up fa-lg"></i></button>
