Added live demo link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						a MongoDB database and an external REST API. 
 					</p>
 					<div>
-						<!--<button class="colorbutton"><p><b>live demo</b></p></button>-->
+						<button class="colorbutton" onclick="window.open('https://murmuring-eyrie-20813-8756f01191e8.herokuapp.com')"><p><b>live demo</b></p></button>
 						<button class="colorbutton" onclick="window.open('https://github.com/colecathcart/DMScreen-project')"><p><b>github</b></p></button>
 					</div>
 				</div>
