Added hackathon slide

--- a/index.html
+++ b/index.html
@@ -95,19 +95,17 @@
 			</div>
 			<div class="project">
 				<div class="proj-desc">
-					<h2>True Randomness Generator</h2>
+					<h2>Nursing Speech-to-Text Hackathon</h2>
 					<p>
-						A research project exploring the viability of human gameplay (from the board game 'Battleship')
-						as an entropy source for true random number generation. Our experiment evaluated both the speed
-						and quality of random numbers produced from this source. Data processing and mathematical randomness testing was performed
-						using Python.
+						A hackathon to develop "CareVoice", a prototype LLM-powered speech-to-text device for a team of nursing students.
+						Uses Deepgram to generate text from recorded conversations between nurses and patients, and OpenAI's gpt-4o mini to
+						summarize transcripts into a variety of medical documents. Implemnted with React, Spring Boot and MySQL.
 					</p>
 					<div>
-						<button class="colorbutton" onclick="window.open('https://drive.google.com/file/d/1BjGSivjr__VvIEMPRMueBl7sptZDDUik/view?usp=sharing')"><p><b>project report</b></p></button>
-						<button class="colorbutton" onclick="window.open('https://github.com/colecathcart/CPSC-530-Project')"><p><b>github</b></p></button>
+						<button class="colorbutton" onclick="window.open('https://github.com/CareVoice-Hackathon')"><p><b>github</b></p></button>
 					</div>
 				</div>
-				<img src="images/trng.png" alt="profile picture" width="200" height="200">
+				<img src="images/hackathon.png" alt="profile picture" width="200" height="200">
 			</div>
 		</div>
 		<div class="contact">
