--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				<img class="about-img" src="images/profile.png" alt="profile picture" width="200" height="200">
 				<div class="about-desc">
 					<p>
-						I am a M.Eng Software student, passionate about 
+						I am a recent graduate with a Masters in Software Engineering and
+						a Bsc. in Computer Science. Passionate about 
 						learning new things and growing my skills in software.
 						A team player who excels at communicating solutions to complex problems. 
 						Never afraid to ask questions or help others with theirs.
